# spec_driven_development

spike/claude_code/todo_cli/: .gitignore  CLAUDE.md  pyproject.toml
spike/claude_code/todo_cli/src/todo_cli/: display.py  main.py  models.py  repository.py  service.py
spike/claude_code/todo_cli/tests/: test_display.py  test_main.py  test_models.py  test_repository.py  test_service.py
spike/gemini/todo_cli/: .coverage  .gitignore  README.md  ReadThisFirst.md  pyproject.toml
spike/gemini/todo_cli/doc/: Design.md  ImplementationPlan.md  Preparation.md  Requirement.md  Usage.md
spike/gemini/todo_cli/src/todo/: database.py  main.py  manager.py  models.py
spike/gemini/todo_cli/tests/: test_database.py  test_main.py  test_manager.py
spike/spec-kit-with-codex/: .gitignore  AGENTS.md  Readme.md  mypy.ini  pyproject.toml
spike/spec-kit-with-codex/.specify/: extensions.yml  feature.json  init-options.json
spike/spec-kit-with-codex/.specify/extensions/: .registry
spike/spec-kit-with-codex/.specify/extensions/git/: README.md  extension.yml  git-config.yml
spike/spec-kit-with-codex/.specify/extensions/git/commands/: speckit.git.commit.md  speckit.git.feature.md  speckit.git.initialize.md  speckit.git.remote.md  speckit.git.validate.md
spike/spec-kit-with-codex/.specify/extensions/git/scripts/bash/: git-common.sh
spike/spec-kit-with-codex/.specify/integrations/: codex.manifest.json  speckit.manifest.json
spike/spec-kit-with-codex/.specify/memory/: constitution.md
spike/spec-kit-with-codex/.specify/scripts/bash/: common.sh
spike/spec-kit-with-codex/.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
spike/spec-kit-with-codex/specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
spike/spec-kit-with-codex/specs/001-cli-todo-app/checklists/: requirements.md
spike/spec-kit-with-codex/specs/001-cli-todo-app/contracts/: cli-contract.md
spike/spec-kit-with-codex/specs/002-edit-task-title/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
spike/spec-kit-with-codex/specs/002-edit-task-title/checklists/: requirements.md
spike/spec-kit-with-codex/specs/002-edit-task-title/contracts/: cli-edit-contract.md
spike/spec-kit-with-codex/src/todo_cli/: __init__.py  app.py  cli.py  models.py  repository.py
spike/spec-kit-with-codex/tests/: conftest.py
spike/spec-kit-with-codex/tests/contract/: test_cli_contract.py
spike/spec-kit-with-codex/tests/integration/: test_cli_workflows.py
spike/spec-kit-with-codex/tests/unit/: test_models.py  test_repository.py
(+48 files in other folders)
