[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli"
version = "0.1.0"
description = "CLI TODO application"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7.0",
]

[project.scripts]
todo = "todo_cli.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
