[project]
name = "todo-cli"
version = "0.1.0"
description = "A simple command-line TODO application."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.5.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
todo = "todo.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
